# Sketch_builder_server

./: CMakeLists.txt  README.md
include/server/: Command.h  CompileCommand.h  EqualizeCommand.h  ExitCommand.h  GeneratorCommand.h  RequestHandler.h  Server.h  ServerException.h  StartSystemCommand.h  SystemConfiguration.h
src/: CompileCommand.cpp  EqualizeCommand.cpp  ExitCommand.cpp  Files.cpp  GeneratorCommand.cpp  RequestHandler.cpp  Server.cpp  ServerException.cpp  StartSystemCommand.cpp  SystemConfiguration.cpp  main.cpp
